<resources>
    <string name="app_name">EduArt</string>
    <string name="simpan">Simpan</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="label_forget_password">Lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="label_not_have_account">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="home">Beranda</string>
    <string name="tips">Kelas</string>
    <string name="pesan">Pesan</string>
    <string name="profil">Profil</string>
</resources>
